MODTLR-75 Search slips implementation and tests